--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -13,6 +13,7 @@
     /* width: 25%; */
     box-sizing: border-box;
     cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .button:last-child {
