--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -5,6 +5,7 @@
     width: 210px;
     height: 260px;
     border-radius: 4px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .display {
@@ -18,6 +19,7 @@
     padding: 5px;
     height: 30px;
     cursor: default;
+    box-shadow: 0 4px 8px 0 rgba(250, 250, 250, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
 
 .btn-holder {
