--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   padding: 2rem;
   text-align: center;
   color: #104373;;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 #main {
@@ -11,4 +12,9 @@
   justify-content: space-evenly;
   gap: 2rem;
   margin-top: 4rem;
+}
+
+h1 {
+  font-family: 'Bruno Ace', cursive;
+  text-shadow: 1px 1px 2px #104373;
 }
