--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     color:  #b5e0d3;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Bruno Ace', cursive;
     font-weight: bolder;
     background-color:#104373;
     width: 42px;
@@ -20,3 +20,6 @@
     height: 65px;
 }
 
+.button:hover {
+    color: #62cbe7;
+}
