--- a/src/components/GameInfo/GameInfo.module.css
+++ b/src/components/GameInfo/GameInfo.module.css
@@ -1,5 +1,5 @@
 #game-info {
-    max-width: 25%;
+    width: 25%;
     padding-top: 16px;
     background-color: #104373;
     border: solid 2px #104373;
@@ -13,16 +13,23 @@
     border: 2px solid #62cbe7;
     border-radius: 4px;
     color: #104373;
-    margin: 1px;
+    font-family: 'Bruno Ace', cursive;
+    margin: 4px;
     cursor: pointer;
 }
 
+#game-info button:hover {
+    color: whitesmoke;
+}
+
 #game-info h6 {
+    font-weight: bold;
     margin-top: 2rem;
     margin-bottom: 0px;
 }
 
 .symbol-clicks {
+    font-weight: bold;
     padding-top: 1rem;
     margin-bottom: 1rem;
 }
