--- a/src/components/InfoModal/InfoModal.module.css
+++ b/src/components/InfoModal/InfoModal.module.css
@@ -18,10 +18,21 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: green;
+    color: #104373;
+    background-color: whitesmoke;
     padding: 24px;
+    border: #104373 solid 6px;
+    border-radius: 8px;
 }
 
-.modal-container.record {
-    background-color: yellow;
+.modal-message {
+    margin-bottom: 0.5rem;
+}
+
+.timer {
+    color: #62cbe7;
+}
+
+.record {
+    color: #62cbe7;
 }
