--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -2,22 +2,24 @@
     display: flex;
     flex-direction: column;
     background-color: #62cbe7;
-    width: 210px;
-    height: 260px;
+    /* width: 210px;
+    height: 260px; */
+    width: 35rem;
+    height: 45rem;
     border-radius: 4px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;}
 
 .display {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     background-color: whitesmoke;
-    font-size: 1.5rem;
+    font-size: 4rem;
     font-family: 'Orbitron', sans-serif;
-    margin: 10px;
-    padding: 5px;
-    height: 30px;
+    margin: 0rem 2rem;
+    margin-top: 3.5rem;
+    padding: 1rem;
+    height: 4rem;
     cursor: default;
     box-shadow: 0 4px 8px 0 rgba(250, 250, 250, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
 }
@@ -28,8 +30,43 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 5px;
-    max-height: 200px;
-    margin: 5px;
-
+    gap: 0.9rem;
+    margin: 2rem;
+    max-height: 32rem;
 }
+
+@media screen and (max-width: 620px) {
+    #calculator {
+        width: 90%;
+        height: 40rem;
+    }
+    .display {
+        font-size: 3rem;
+        margin: 0rem 1.5rem;
+        margin-top: 2.5rem;
+        padding: 0.8rem;
+        height: 3rem;
+    }
+    .btn-holder {
+        max-height: 25rem;
+    }
+  }
+
+  @media screen and (max-width: 500px) {
+    #calculator {
+        width: 100%;
+        height: 30rem;
+    }
+    .display {
+        font-size: 2rem;
+        margin: 0rem 1.5rem;
+        margin-top: 2.5rem;
+        padding: 0.7rem;
+        height: 2rem;
+    }
+    .btn-holder {
+        max-height: 20rem;
+        gap: 0.5rem;
+        margin: 1.5rem 1rem;
+    }
+  }
