--- a/src/components/InfoModal/InfoModal.module.css
+++ b/src/components/InfoModal/InfoModal.module.css
@@ -31,8 +31,27 @@
 
 .timer {
     color: #62cbe7;
+    font-family: 'PT Mono', monospace;
 }
 
 .record {
     color: #62cbe7;
 }
+
+@media screen and (min-width: 600px) {
+    .modal-container {
+        font-size: 2rem;
+    }
+  }
+
+@media screen and (min-width: 900px) {
+    .modal-container {
+        font-size: 3rem;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    .modal-container {
+        font-size: 4rem;
+    }
+  }
