--- a/src/components/ScoresTable/ScoresTable.module.css
+++ b/src/components/ScoresTable/ScoresTable.module.css
@@ -4,7 +4,11 @@
     border: solid 2px #104373;
     border-radius: 4px;
     color: #b5e0d3;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+#best-times p {
+    /* font-family: 'PT Mono', monospace; */
 }
 
 #best-times p:first-child{
@@ -16,3 +20,19 @@
     color: #62cbe7;
     border: #62cbe7 solid 2px;
 }
+
+@media screen and (max-width: 1400px) {
+    #best-times {
+        margin-top: 5rem;
+        width: 80%;
+    }
+  }
+
+  @media screen and (max-width: 900px) {
+    #best-times {
+        width: 70%;
+    }
+  }
+
+
+
