--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,16 +2,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color:  #b5e0d3;
+    color: #b5e0d3;
     font-family: 'Bruno Ace', cursive;
     font-weight: bolder;
-    background-color:#104373;
-    /* width: 42px;
-    height: 30px; */
-    /* width: 7rem; */
+    background-color: #104373;
     width: 22%;
     height: 5rem;
-    border: 2px solid  #104373;
+    border: 2px solid #104373;
     border-radius: 4px;
     box-sizing: border-box;
     cursor: pointer;
@@ -26,22 +23,26 @@
     color: #62cbe7;
 }
 
+/* MEDIA QUERY FOR RESPONSIVE DESIGN */
+
 @media screen and (max-width: 620px) {
     .button {
         /* width: 6rem; */
         height: 4rem;
     }
+
     .button:last-child {
         height: 145px;
     }
-  }
+}
 
-  @media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
     .button {
         /* width: 6rem; */
         height: 3rem;
     }
+
     .button:last-child {
         height: 110px;
     }
-  }
+}
