--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -2,12 +2,11 @@
     display: flex;
     flex-direction: column;
     background-color: #62cbe7;
-    /* width: 210px;
-    height: 260px; */
     width: 35rem;
     height: 45rem;
     border-radius: 4px;
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;}
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
 
 .display {
     display: flex;
@@ -35,11 +34,14 @@
     max-height: 32rem;
 }
 
+/* MEDIA QUERY FOR RESPONSIVE DESIGN */
+
 @media screen and (max-width: 620px) {
     #calculator {
         width: 90%;
         height: 40rem;
     }
+
     .display {
         font-size: 3rem;
         margin: 0rem 1.5rem;
@@ -47,16 +49,18 @@
         padding: 0.8rem;
         height: 3rem;
     }
+
     .btn-holder {
         max-height: 25rem;
     }
-  }
+}
 
-  @media screen and (max-width: 500px) {
+@media screen and (max-width: 500px) {
     #calculator {
         width: 100%;
         height: 30rem;
     }
+
     .display {
         font-size: 2rem;
         margin: 0rem 1.5rem;
@@ -64,9 +68,10 @@
         padding: 0.7rem;
         height: 2rem;
     }
+
     .btn-holder {
         max-height: 20rem;
         gap: 0.5rem;
         margin: 1.5rem 1rem;
     }
-  }
+}
